<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="material">Make Your App Material</string>
    <string name="ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>

    <string name="default_toast_message">This button will launch my %1$s app!</string>
</resources>
