<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.mohitpunjabi.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/my_title"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/popularMoviesButton"
        style="@style/AppTheme.AppButton"
        android:layout_below="@+id/titleTextView"
        android:layout_marginTop="30dp"
        android:onClick="displayToast"
        android:text="@string/popular_movies"/>

    <Button
        android:id="@+id/stockHawkButton"
        style="@style/AppTheme.AppButton"
        android:layout_below="@+id/popularMoviesButton"
        android:onClick="displayToast"
        android:text="@string/stock_hawk"/>

    <Button
        android:id="@+id/buildItBiggerButton"
        style="@style/AppTheme.AppButton"
        android:layout_below="@+id/stockHawkButton"
        android:onClick="displayToast"
        android:text="@string/build_it_bigger"/>

    <Button
        android:id="@+id/materialButton"
        style="@style/AppTheme.AppButton"
        android:layout_below="@+id/buildItBiggerButton"
        android:onClick="displayToast"
        android:text="@string/material"/>

    <Button
        android:id="@+id/ubiquitousButton"
        style="@style/AppTheme.AppButton"
        android:layout_below="@+id/materialButton"
        android:onClick="displayToast"
        android:text="@string/ubiquitous"/>

    <Button
        android:id="@+id/capstoneButton"
        style="@style/AppTheme.AppButton"
        android:layout_below="@+id/ubiquitousButton"
        android:onClick="displayToast"
        android:text="@string/capstone"/>

</RelativeLayout>
